[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/audioManager.gd" type="Script" id=1]
[ext_resource path="res://audio/nyan-cat-to-loop.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/Coins 2 - Sound effects Pack 2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/impulse.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/ShortJump.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/LongJump.wav" type="AudioStream" id=6]

[node name="audioPlayer" type="Node"]
script = ExtResource( 1 )

[node name="gameBgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="confirmButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0

[node name="spring" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="shortJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="longJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="finished" from="confirmButton" to="." method="_on_confirmButton_finished"]
[connection signal="finished" from="spring" to="." method="_on_spring_finished"]
[connection signal="finished" from="shortJump" to="." method="_on_shortJump_finished"]
[connection signal="finished" from="longJump" to="." method="_on_longJump_finished"]
